[build-system]
requires = [
    "setuptools >= 62.3.0",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[project]
name = 'XAVIER'
dynamic = ['version','readme']
description = "eXome Analysis and Variant explorER"
authors = [
    {name = "Daryl Nousome"},
    {name = "Samarth Mathur"},
    {name = "Kelly Sovacool", email = "kelly.sovacool@nih.gov"},
    {name = "Samanthe Sevilla"},
    {name = "Vishal Koparde", email = "vishal.koparde@nih.gov"},
    {name = "Skyler Kuhn"},
    {name = "Mayank Tandon"}
]
maintainers = [
    {name = "CCR Collaborative Bioinformatics Resource", email = "ccbr@mail.nih.gov"},
]
license = {file = "LICENSE"}
classifiers = [
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT license",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.11"
dependencies = [
    "ccbr_tools@git+https://github.com/CCBR/Tools@v0.2",
    "Click >= 8.1.3",
    "PySimpleGUI-4-foss < 5",
    "snakemake >= 7.32, < 8",
]

[project.optional-dependencies]
dev = [
    "black >= 22.0.0",
    "pre-commit"
]
test = [
    "pytest"
]

[project.scripts]
xavier = "xavier.src.xavier.__main__:main"

[project.urls]
Repository = "https://github.com/CCBR/XAVIER"

[tool.setuptools.package-dir]
xavier = "."

[tool.setuptools.package-data]
"*" = ["CITATION.cff", "LICENSE", "VERSION", "docker/**", "resources/**", "bin/**", "config/**", "resources/**", "workflow/**", "tests/**"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
readme = {file = "README.md"}
